Score of midnight-dev vs midnight-latest: 4697 - 4442 - 3307  [0.510] 12446
...      midnight-dev playing White: 2425 - 2160 - 1638  [0.521] 6223
...      midnight-dev playing Black: 2272 - 2282 - 1669  [0.499] 6223
...      White vs Black: 4707 - 4432 - 3307  [0.511] 12446
Elo difference: 7.1 +/- 5.2, LOS: 99.6 %, DrawRatio: 26.6 %
SPRT: llr 2.98 (101.1%), lbound -2.94, ubound 2.94 - H1 was accepted

Tuned PSTs and Other penalties etc.
Score of midnight-dev vs midnight-pesto: 875 - 677 - 448 [0.549]
...      midnight-dev playing White: 453 - 322 - 225  [0.566] 1000
...      midnight-dev playing Black: 422 - 355 - 223  [0.533] 1000
...      White vs Black: 808 - 744 - 448  [0.516] 2000
Elo difference: 34.5 +/- 13.4, LOS: 100.0 %, DrawRatio: 22.4 %

Mobility Bonus
Score of midnight-dev vs midnight-latest: 399 - 308 - 234  [0.548] 941
...      midnight-dev playing White: 200 - 155 - 116  [0.548] 471
...      midnight-dev playing Black: 199 - 153 - 118  [0.549] 470
...      White vs Black: 353 - 354 - 234  [0.499] 941
Elo difference: 33.7 +/- 19.3, LOS: 100.0 %, DrawRatio: 24.9 %
SPRT: llr 2.98 (101.1%), lbound -2.94, ubound 2.94 - H1 was accepted

Blocked Passed Pawn Eval
Score of midnight-dev vs midnight-latest: 773 - 670 - 541  [0.526] 1984
...      midnight-dev playing White: 400 - 315 - 278  [0.543] 993
...      midnight-dev playing Black: 373 - 355 - 263  [0.509] 991
...      White vs Black: 755 - 688 - 541  [0.517] 1984
Elo difference: 18.1 +/- 13.0, LOS: 99.7 %, DrawRatio: 27.3 %
SPRT: llr 2.95 (100.2%), lbound -2.94, ubound 2.94 - H1 was accepted

Rook on open file
Score of midnight-dev vs midnight-latest: 613 - 516 - 429  [0.531] 1558
...      midnight-dev playing White: 304 - 266 - 210  [0.524] 780
...      midnight-dev playing Black: 309 - 250 - 219  [0.538] 778
...      White vs Black: 554 - 575 - 429  [0.493] 1558
Elo difference: 21.7 +/- 14.7, LOS: 99.8 %, DrawRatio: 27.5 %
SPRT: llr 2.97 (100.8%), lbound -2.94, ubound 2.94 - H1 was accepted