@@ -9,11 +9,12 @@ constexpr Score evaluate_king(Position& board) {
 
 	Bitboard king = board.bitboard_of(color, KING);
 	Square king_square = pop_lsb(&king);
+	const Bitboard king_bb = SQUARE_BB[king_square];
 	score += PIECE_VALUES[KING];
 	score += read_psqt<color>(KING, king_square);
 
-	const bool on_open_file = king & board_open_files;
-	const bool on_semi_open_file = king & board_semi_open_files;
+	const bool on_open_file = king_bb & board_open_files;
+	const bool on_semi_open_file = king_bb & board_semi_open_files;
 	score += (OPEN_FILE_BONUS[KING] * on_open_file) + (SEMI_OPEN_FILE_BONUS[KING] * on_semi_open_file);
 	return score;
 }
